popcorn173 complete and fly173 link updates

--- a/index.html
+++ b/index.html
@@ -430,22 +430,22 @@
         <div class="centeringcontainer">
         <ul>
             <div class="episodelog-item style7 image" >
-              <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=20">
+              <a class="frame" href="https://www.youtube.com/watch?v=Qd5QMsf_G3A&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=20">
                 <img alt="" src="assets/images/popcorn173e1.jpg"/>
               </a>
             </div>
             <div class="episodelog-item style7 image">
-              <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=19">
+              <a class="frame" href="https://www.youtube.com/watch?v=dFPruT1jMLU&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=19">
                 <img alt="" src="assets/images/popcorn173e2.jpg"/>
               </a>
             </div>
             <div class="episodelog-item style7 image" >
-                <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=18">
+                <a class="frame" href="https://www.youtube.com/watch?v=HH8DBNZa0nA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=18">
                   <img alt="" src="assets/images/popcorn173e3.jpg"/>
                 </a>
               </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=17">
+            <a class="frame" href="https://www.youtube.com/watch?v=vbtxhXBi5s0&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=17">
               <img alt="" src="assets/images/popcorn173e4.jpg"/>
             </a>
           </div>
@@ -455,22 +455,22 @@
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=15">
+            <a class="frame" href="https://www.youtube.com/watch?v=KohMpXFjNyo&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=15">
               <img alt="" src="assets/images/popcorn173e6.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=14">
+            <a class="frame" href="https://www.youtube.com/watch?v=wlwGnlkY_y4&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=14">
               <img alt="" src="assets/images/popcorn173e7.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=13">
+            <a class="frame" href="https://www.youtube.com/watch?v=vKVb_vDUWOA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=13">
               <img alt="" src="assets/images/popcorn173e8.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=12">
+            <a class="frame" href="https://www.youtube.com/watch?v=Qcdpjsv87-Y&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=12">
               <img alt="" src="assets/images/popcorn173e9.jpg"/>
             </a>
           </div>
@@ -480,23 +480,53 @@
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=10">
+            <a class="frame" href="https://www.youtube.com/watch?v=MkU9yEEdZRA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=10">
               <img alt="" src="assets/images/popcorn173e11.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=9">
+            <a class="frame" href="https://www.youtube.com/watch?v=hJanhxvqk8Q&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=9">
               <img alt="" src="assets/images/popcorn173e12.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=8">
+            <a class="frame" href="https://www.youtube.com/watch?v=ntQ-OPfK938&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=8">
               <img alt="" src="assets/images/popcorn173e13.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=7">
+            <a class="frame" href="https://www.youtube.com/watch?v=q0dDkRgmqVU&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=7">
               <img alt="" src="assets/images/popcorn173e14.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=f8NdBa1Xd6Y&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=6">
+              <img alt="" src="assets/images/popcorn173e15.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=k3zzVUq9GCo&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=5">
+              <img alt="" src="assets/images/popcorn173e16.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=sBcEl7_HS6o&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=4">
+              <img alt="" src="assets/images/popcorn173e17.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=JlyKkxE0LVA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=3">
+              <img alt="" src="assets/images/popcorn173e18.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=dXjCnjE9kfc&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=2">
+              <img alt="" src="assets/images/popcorn173e19.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=P3es5ZCvy6A&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=1">
+              <img alt="" src="assets/images/popcorn173e20.jpg"/>
             </a>
           </div>
         </ul>
