adding starlight boys

--- a/index.html
+++ b/index.html
@@ -262,6 +262,12 @@
         Survival Show Appearances
        </p>
        <div class="cataloguepagegrid">
+          <div class="catalogue-item style1 image" >
+            <a class="frame" href="#starlight">
+              <img alt="" src="assets/images/starlight_cover.jpg"/>
+              <div class="caption">Starlight Boys</div>
+            </a>
+          </div>
         </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1005,6 +1011,24 @@
         </div>
             
           <hr class="divider">    
+       </section>
+
+       <section class="inactive" id="starlight-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/starlightboys_bckgnd.jpg" alt="Background Image" class="background-image" />
+            <div class="overlay-content">
+                <h1>Starlight Boys</h1>
+                <p>BAE173 members play games with fellow Pocketdol artists, including Fantasy Boys, CLASS:y, Espero and soloist Bok Ji Eun.</p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=Li9XW6ptmoo" class="button2">Performances</a>
+                    
+                    <a href="https://www.youtube.com/watch?v=6wUUrdfTKoc" class="button2">Fancams</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
        </section>
 
     </div>
