--- a/index.html
+++ b/index.html
@@ -1018,11 +1018,11 @@
             <img src="assets/images/starlightboys_bckgnd.jpg" alt="Background Image" class="background-image" />
             <div class="overlay-content">
                 <h1>Starlight Boys</h1>
-                <p>BAE173 members play games with fellow Pocketdol artists, including Fantasy Boys, CLASS:y, Espero and soloist Bok Ji Eun.</p>
+                <p>Hangyul, Doha, Minjae (Bit) and Yoojun participated as contestants on the IQiyi survival show, Starlight Boys in Oct. - Dec. 2024. Hangyul successfully made the final lineup, and became a member of Polarix.</p>
                 <div class="button2-container">
-                    <a href="https://www.youtube.com/watch?v=Li9XW6ptmoo" class="button2">Performances</a>
+                    <a href="https://www.youtube.com/watch?v=FEpcg0XaP2I&list=PLVdDuEbp0aa0OofVHvHNc8sRChxL7w1xV" class="button2">Performances</a>
                     
-                    <a href="https://www.youtube.com/watch?v=6wUUrdfTKoc" class="button2">Fancams</a>
+                    <a href="https://www.youtube.com/watch?v=mmaiq5pWHTA&list=PLVdDuEbp0aa3dzvZBao5lkC324IzM8SDy" class="button2">Fancams</a>
                 </div>                
               </div>
           </div>
