adding lazy loading to catalogue page

--- a/index.html
+++ b/index.html
@@ -184,31 +184,31 @@
       <div class="cataloguepagegrid">
         <div class="catalogue-item style1 image" >
           <a class="frame" href="#fly173">
-            <img alt="" src="assets/images/fly173_cover.jpg"/>
+            <img alt="" src="assets/images/fly173_cover.jpg" loading="lazy"/>
             <div class="caption">FLY173</div>
           </a>
         </div>
         <div class="catalogue-item style1 image">
           <a class="frame" href="#popcorn173">
-            <img alt="" src="assets/images/popcorn173_cover.jpg"/>
+            <img alt="" src="assets/images/popcorn173_cover.jpg" loading="lazy"/>
             <div class="caption">Popcorn173</div>
           </a>
         </div>
         <div class="catalogue-item style1 image">
             <a class="frame" href="#podolarcade">
-              <img alt="" src="assets/images/podolarcade_cover.jpg"/>
+              <img alt="" src="assets/images/podolarcade_cover.jpg" loading="lazy"/>
               <div class="caption">Pocketdol Arcade</div>
             </a>
           </div>
         <div class="catalogue-item style1 image">
             <a class="frame" href="#baelog">
-              <img alt="" src="assets/images/baelog_cover.jpg"/>
+              <img alt="" src="assets/images/baelog_cover.jpg" loading="lazy"/>
               <div class="caption">BAE-LOG</div>
             </a>
           </div>
           <div class="catalogue-item style1 image">
             <a class="frame" href="#idolclass">
-              <img alt="" src="assets/images/idolclass_cover.jpg"/>
+              <img alt="" src="assets/images/idolclass_cover.jpg" loading="lazy"/>
               <div class="caption">Idol Class</div>
             </a>
           </div>
@@ -220,37 +220,37 @@
       <div class="cataloguepagegrid">
         <div class="catalogue-item style1 image" >
           <a class="frame" href="#luceat">
-            <img alt="" src="assets/images/luceat_cover.jpg"/>
+            <img alt="" src="assets/images/luceat_cover.jpg"loading="lazy"/>
             <div class="caption">New Chapter: Luceat</div>
           </a>
         </div>
         <div class="catalogue-item style1 image" >
             <a class="frame" href="#what">
-              <img alt="" src="assets/images/what_cover.jpg"/>
+              <img alt="" src="assets/images/what_cover.jpg" loading="lazy"/>
               <div class="caption">WHAT DVD Release</div>
             </a>
           </div>
           <div class="catalogue-item style1 image" >
             <a class="frame" href="#dash">
-              <img alt="" src="assets/images/dash_cover.jpg"/>
+              <img alt="" src="assets/images/dash_cover.jpg" loading="lazy"/>
               <div class="caption">Odyssey: DaSh</div>
             </a>
           </div>
           <div class="catalogue-item style1 image" >
             <a class="frame" href="#blaze">
-              <img alt="" src="assets/images/blaze_cover.jpg"/>
+              <img alt="" src="assets/images/blaze_cover.jpg" loading="lazy"/>
               <div class="caption">Intersection: Blaze</div>
             </a>
           </div>
           <div class="catalogue-item style1 image" >
             <a class="frame" href="#trace">
-              <img alt="" src="assets/images/trace_cover.jpg"/>
+              <img alt="" src="assets/images/trace_cover.jpg" loading="lazy"/>
               <div class="caption">Intersection: Trace</div>
             </a>
           </div>
           <div class="catalogue-item style1 image" >
             <a class="frame" href="#spark">
-              <img alt="" src="assets/images/spark_cover.jpg"/>
+              <img alt="" src="assets/images/spark_cover.jpg" loading="lazy"/>
               <div class="caption">Intersection: Spark</div>
             </a>
           </div>
@@ -268,13 +268,13 @@
        <div class="cataloguepagegrid">
           <div class="catalogue-item style1 image" >
             <a class="frame" href="#starlight">
-              <img alt="" src="assets/images/starlight_cover.jpg"/>
+              <img alt="" src="assets/images/starlight_cover.jpg" loading="lazy"/>
               <div class="caption">Starlight Boys</div>
             </a>
           </div>
           <div class="catalogue-item style1 image" >
             <a class="frame" href="#project7">
-              <img alt="" src="assets/images/project7_cover-01.jpg"/>
+              <img alt="" src="assets/images/project7_cover-01.jpg" loading="lazy"/>
               <div class="caption">Project 7</div>
             </a>
           </div>
@@ -298,13 +298,13 @@
        <div class="cataloguepagegrid">
         <div class="catalogue-item style1 image" >
           <a class="frame" href="#newiland">
-            <img alt="" src="assets/images/baecation_cover.jpg"/>
+            <img alt="" src="assets/images/baecation_cover.jpg" loading="lazy"/>
             <div class="caption">BAEcation</div>
           </a>
         </div>
         <div class="catalogue-item style1 image noengsub">
           <a class="frame" href="#newenhahi">
-            <img alt="" src="assets/images/polaris_cover.jpg"/>
+            <img alt="" src="assets/images/polaris_cover.jpg" loading="lazy"/>
             <div class="caption">Polaris</div>
           </a>
         </div>
