--- a/index.html
+++ b/index.html
@@ -1014,14 +1014,14 @@
         <div class="teasercontainer cbcontainer">
             <div class="video-box cb-video-box">
                 <div class="textbox cbimage">
-                    <img alt="" src="assets/images/blaze_cover.jpg"/>
+                    <img alt="" src="assets/images/blaze_cover.jpg" loading="lazy"/>
                 </div>
                 <iframe 
                 class="youtube-video" 
                 src="https://www.youtube.com/embed/GsRqHvsrF8Q?autoplay=1&mute=1&rel=0&loop=0&controls=1&cc_load_policy=1&start=0" 
                 frameborder="0" 
                 allow="autoplay; encrypted-media" 
-                allowfullscreen>
+                allowfullscreen loading="lazy">
                 </iframe>            
                 <div class="textbox tracklist-box">
                     <h2 class="tracklisttitle">Tracklist</h2>
@@ -1048,10 +1048,10 @@
             </div>
           </div>
           <a href="https://open.spotify.com/album/3Fq9Q9R4JeietWxlin6Xiy?si=y_9ZD5VaTg-ttfbjMimRnw" class="musicicon">
-            <img alt="" src="assets/images/spotifylogo.png"/>
+            <img alt="" src="assets/images/spotifylogo.png" loading="lazy"/>
         </a>
         <a href="https://music.apple.com/us/album/new-chapter-luceat-single/1735435750" class="musicicon">
-            <img alt="" src="assets/images/apple_music_logo.svg"/>
+            <img alt="" src="assets/images/apple_music_logo.svg" loading="lazy"/>
         </a>
             </div>
         </div>
@@ -1068,14 +1068,14 @@
         <div class="teasercontainer cbcontainer">
             <div class="video-box cb-video-box">
                 <div class="textbox cbimage">
-                    <img alt="" src="assets/images/dash_cover.jpg"/>
+                    <img alt="" src="assets/images/dash_cover.jpg" loading="lazy"/>
                 </div>
                 <iframe 
                 class="youtube-video" 
                 src="https://www.youtube.com/embed/yrdeQUVwATg?autoplay=1&mute=1&rel=0&loop=0&controls=1&cc_load_policy=1&start=0" 
                 frameborder="0" 
                 allow="autoplay; encrypted-media" 
-                allowfullscreen>
+                allowfullscreen loading="lazy">
                 </iframe>            
                 <div class="textbox tracklist-box">
                     <h2 class="tracklisttitle">Tracklist</h2>
@@ -1103,7 +1103,7 @@
             </div>
           </div>
         <a href="https://music.apple.com/us/album/new-chapter-luceat-single/1735435750" class="musicicon">
-            <img alt="" src="assets/images/apple_music_logo.svg"/>
+            <img alt="" src="assets/images/apple_music_logo.svg" loading="lazy"/>
         </a>
             </div>
         </div>
