missing lazy loading

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="image" id="openinglogo" style="opacity: 1; transform: none;">
        <a class="frame" href="#welcome">
-        <img alt="" src="assets/images/baeflix_logo_hq.jpg"/>
+        <img alt="" src="assets/images/baeflix_logo_hq.jpg" loading="lazy"/>
        </a>
       </div>
      </section>
@@ -69,7 +69,7 @@
         <div class="image-item">
           <div class="style2 image" data-position="center" style="opacity: 0; transform: translateY(-1.6875rem);">
            <a class="frame deferred" href="#catalogue" style='background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D"); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat;'>
-            <img alt="" data-src="assets/images/whoiswatchingicons-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
+            <img alt="" data-src="assets/images/whoiswatchingicons-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;" loading="lazy"/>
            </a>
           </div>
           <p class="landingpagetext" style="opacity: 0;">
@@ -79,7 +79,7 @@
         <div class="image-item">
             <div class="style3 image" data-position="center" style="opacity: 0; transform: translateY(-1.6875rem);">
              <a class="frame deferred" href="#abenflix" style='background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D"); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat;'>
-              <img alt="" data-src="assets/images/whoiswatchingicons-02.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
+              <img alt="" data-src="assets/images/whoiswatchingicons-02.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;" loading="lazy"/>
              </a>
             </div>
             <p class="landingpagetext" style="opacity: 0;">
@@ -156,7 +156,7 @@
                <div class="text-container">
                   <p class="navbartext" style="opacity: 1;">
                      <a href="#abenflix">About BAE-FLIX</a> | 
-                     <a href="https://x.com/elseville173" >Reach us at @elseville173</a>
+                     <a href="https://x.com/elseville173" >@elseville173</a>
                   </p>
                </div>
             </div>
@@ -164,7 +164,7 @@
       <!--this is the big banner image at the top of the page-->
       <div class="banner" data-position="center" id="image25" style="opacity: 0; transform: translateY(-1.6875rem);">
        <a class="frame deferred" href="#luceat" style='background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNTYwIDg5OSIgd2lkdGg9IjI1NjAiIGhlaWdodD0iODk5IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjNGMzNDJhIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B"); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat;'>
-        <img alt="" data-src="assets/images/newchapterluceatbanner-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNTYwIDg5OSIgd2lkdGg9IjI1NjAiIGhlaWdodD0iODk5IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjNGMzNDJhIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
+        <img alt="" data-src="assets/images/newchapterluceatbanner-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNTYwIDg5OSIgd2lkdGg9IjI1NjAiIGhlaWdodD0iODk5IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjNGMzNDJhIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B" style="opacity: 0; transition: opacity 0.375s ease-in-out;" loading="lazy"/>
        </a>
       </div>
     <!-- Container for text and slider -->
