--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
       
        <!--under construction-->
 
-       <section class="inactive" id="trace-section" style="display: none;">
+       <section class="inactive" id="spark-section" style="display: none;">
         <div class="top-banner">
             <a href="#catalogue">← BACK TO BAEFLIX</a>
         </div>
