--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
               <div class="caption">Project 7</div>
             </a>
           </div>
+          <div class="catalogue-item style1 image" >
+            <a class="frame" href="#peaktime">
+              <img alt="" src="assets/images/peaktime_cover.jpg" loading="lazy"/>
+              <div class="caption">Peak Time</div>
+            </a>
+          </div>
         </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1214,8 +1220,28 @@
           <hr class="divider">    
        </section>
 
-       <!--under construction-->
+       <section class="inactive" id="peaktime-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/peaktime_bckgnd-01.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Peak Time</h1>
+                <p>BAE173 participated as Team 13:00 in the JTBC survival show Peak Time from February to April 2023. BAE173 finished in 5th place overall and as a result, participated in the Your Time concert tour.</p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=6hiFFfY9Va0&list=PLVdDuEbp0aa1YzjQEXZHTwCTX-uequNub" class="button2">Performances</a>
+                    
+                    <a href="https://www.youtube.com/watch?v=ANftKmOUQ4Y&list=PLVdDuEbp0aa1yu2AcszXYBcFmfZ_RXlgF&index=1" class="button2">Fancams</a>
 
+                    <a href="https://www.youtube.com/watch?v=hxtVXQv20Kg&list=PLVdDuEbp0aa13Rcs_1UmiR7jioQpmPo7y&index=1" class="button2">Behinds & Variety</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+
+       <!--under construction-->
 
 
     </div>
