starting the tv appearance section

--- a/index.html
+++ b/index.html
@@ -260,6 +260,18 @@
        TV Appearances
       </p>
       <div class="cataloguepagegrid">
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#immortal">
+            <img alt="" src="assets/images/immortalsongs_cover.jpg" loading="lazy"/>
+            <div class="caption">Immortal Songs</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#weeklyidol">
+            <img alt="" src="assets/images/weeklyidol_cover.jpg" loading="lazy"/>
+            <div class="caption">Weekly Idol</div>
+          </a>
+        </div>
       </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -286,7 +298,7 @@
           </div>
         </div>
 
-        
+
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
         Youtube Variety Appearances
       </p>
@@ -1241,8 +1253,41 @@
         </div>
        </section>
 
+       <section class="inactive" id="immortal-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/immortalsongs_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Immortal Songs</h1>
+                <p> BAE173 participated on episode 481 of Immortal Songs, a show where singers perform covers of legendary songs. The theme of episode 481 was BTS X Pdogg, and the episode aired on November 14, 2020. </p>
+                <div class="button2-container">
+                    <a href="https://youtube.com/playlist?list=PL8OVuExSUm3uJxyOwRZ3Qps98ePJN8Qa8&si=wznwkOf36aTpZl4L" class="button2">Full Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
 
+       <section class="inactive" id="weeklyidol-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/weeklyidol_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Weekly Idol</h1>
+                <p> BAE173 participated on episode 486 of Weekly Idol, a long-running Korean variety show. Get to know the boys as they play games and complete challenges! The episode aired on November 18, 2020. </p>
+                <div class="button2-container">
+                    <a href="https://youtu.be/7crOYEhesR0?si=r4GRtB6imau6I9gk" class="button2">English Subtitles</a>
+                    <a href="https://www.youtube.com/watch?v=WViHVy_QNCc" class="button2">Spanish Subtitles</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
        <!--under construction-->
+
+
 
 
     </div>
@@ -2984,7 +3029,7 @@ onvisible.add('.video.style1', {style: 'fade-down', speed: 1000, intensity: 5, t
 
 //other//
 onvisible.add('h1.style1, h2.style1, h3.style1, p.style1', { style: 'zoom-in', speed: 1000, intensity: 5, threshold: 3, delay: 0, replay: false })
-onvisible.add('.button2', {style: 'fade-in', speed: 1000, intensity: 5, threshold: 3, delay: 0, replay: false})
+//onvisible.add('.button2', {style: 'fade-in', speed: 1000, intensity: 5, threshold: 3, delay: 0, replay: false})
 
     })();
 
