--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
             <div class="caption">Weekly Idol</div>
           </a>
         </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#tros">
+            <img alt="" src="assets/images/tros_cover.jpg" loading="lazy"/>
+            <div class="caption">The Return of Superman</div>
+          </a>
+        </div>
       </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1285,7 +1291,26 @@
             <a href="#catalogue">← BACK TO BAEFLIX</a>
         </div>
        </section>
-       <!--under construction-->
+
+       <section class="inactive" id="tros-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/tros_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>The Return of Superman</h1>
+                <p> BAE173 members Dohyon, Hangyul, Doha and Bit briefly appeared as guest stars on episode 363 of The Return of Superman, a long-running show where dads take care of kids with occasional guest appearances. In this episode, BAE173 help prepare for Hayeon's birthday party. The episode aired on January 3, 2021. </p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=RyjRtpkDKrE" class="button2">English Subtitles (full episode)</a>
+                    <a href="https://www.youtube.com/watch?v=3wrd5NbpBMo" class="button2">Indonesian Subtitles</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+         <!--under construction-->
+     
 
 
 
