finishing the tv appearances section

--- a/index.html
+++ b/index.html
@@ -278,6 +278,36 @@
             <div class="caption">The Return of Superman</div>
           </a>
         </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#hiddentrack">
+            <img alt="" src="assets/images/hiddentrack_cover.jpg" loading="lazy"/>
+            <div class="caption">Hidden Track</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image noengsub" >
+          <a class="frame" href="#aratv">
+            <img alt="" src="assets/images/aratv_cover.jpg" loading="lazy"/>
+            <div class="caption">ARA TV</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#wekpop">
+            <img alt="" src="assets/images/wekpop_cover.jpg" loading="lazy"/>
+            <div class="caption">We K-pop What's Up!</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#roadtomax">
+            <img alt="" src="assets/images/roadtomax_cover.jpg" loading="lazy"/>
+            <div class="caption">Road to Max</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#newfesta">
+            <img alt="" src="assets/images/newfesta_cover.jpg" loading="lazy"/>
+            <div class="caption">New Festa</div>
+          </a>
+        </div>
       </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1309,11 +1339,89 @@
         </div>
        </section>
 
-         <!--under construction-->
+      <section class="inactive" id="hiddentrack-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/hiddentrack_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Hidden Track</h1>
+                <p>BAE173 appeared in season 3 episode 8 of Hidden Track, a show where kpop idols talk about their best B-sides. The episode aired on June 2, 2021. </p>
+                <div class="button2-container">
+                    <a href="https://drive.google.com/file/d/1ZmGMP7T8FpuLA9tTJAjPO6yUHMddjrWF/view" class="button2">Watch on Google Drive</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
      
+       <section class="inactive" id="aratv-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/aratv_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>ARA TV</h1>
+                <p>BAE173 appeared in an episode of ARA TV: Idol Live, a live show where kpop idols answer questions and even perform challenges. The episode aired on April 19, 2021. </p>
+                <div class="button2-container">
+                    <a href="https://www.bilibili.com/video/BV14v411H7o7/?spm_id_from=333.337.search-card.all.click" class="button2">Watch on Bilibili TV</a>
+                    <a href="https://www.bilibili.tv/en/video/4787990554744320?s_locale=en_GB&from=COPY" class="button2">Second Bilibili Link</a>
+                    <a href="https://www.youtube.com/watch?v=Z-S8vJsVmS8" class="button2">Highlights with Thai Subs</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
 
+      <section class="inactive" id="wekpop-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/wekpop_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>We K-Pop What's Up!</h1>
+                <p>BAE173 appeared in an episode of We-Kpop What's Up!, a show where kpop idols go undercover in daily life. The episode aired on May 21, 2021. </p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=h1n1WAuS_xA" class="button2">Watch on Youtube</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
 
+       <section class="inactive" id="roadtomax-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/roadtomax_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Road to Max</h1>
+                <p>BAE173 appeared in Road to Max, an Mnet show that where fans vote for their favorite artists so they can attend KCon & do special stages. On the show, BAE173 complete challenges and answer interview questions, and there's also some behind the scenes content. The live aired on August 25 2022. </p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/playlist?list=PL1ZtB2NxhxoRkVtHXUEWIwArgvyyVNQR5" class="button2">Full Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
 
+       <section class="inactive" id="newfesta-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/newfesta_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>New Festa</h1>
+                <p>Hangyul appeared in episode 11 of New Festa, a variety show where the hosts act as music festival planners, and guests come and perform in the final musical performance. The episode aired on August 16 2022. </p>
+                <div class="button2-container">
+                    <a href="https://youtube.com/playlist?list=PLNLe5nyr31ICYpaRY18o1hEiuf3lu3VFD&si=ogrRPvLPZHGMWgf5" class="button2">Full Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+      <!--under construction-->
 
     </div>
    </div>
