starting the youtube content section

--- a/index.html
+++ b/index.html
@@ -339,6 +339,18 @@
         Youtube Variety Appearances
       </p>
       <div class="cataloguepagegrid">
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#idolhouse">
+            <img alt="" src="assets/images/idolhouse_cover.jpg" loading="lazy"/>
+            <div class="caption">Idol House</div>
+          </a>
+        </div>
+        <div class="catalogue-item style1 image" >
+          <a class="frame" href="#thek">
+            <img alt="" src="assets/images/1thek_cover.jpg" loading="lazy"/>
+            <div class="caption">1theK Originals</div>
+          </a>
+        </div>
         </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
@@ -1413,6 +1425,38 @@
                 <p>Hangyul appeared in episode 11 of New Festa, a variety show where the hosts act as music festival planners, and guests come and perform in the final musical performance. The episode aired on August 16 2022. </p>
                 <div class="button2-container">
                     <a href="https://youtube.com/playlist?list=PLNLe5nyr31ICYpaRY18o1hEiuf3lu3VFD&si=ogrRPvLPZHGMWgf5" class="button2">Full Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="idolhouse-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/idolhouse_backgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>Idol House</h1>
+                <p>BAE173 are featured in episodes 15 and 16 of Idol House, where they play games and complete variety-style challenges. The episodes aired on December 23 and December 30 2020. </p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=UdbusDfU38Y&list=PLqfMxcraPOysgDEM0rNPlM5SLwznh33jc&index=1" class="button2">Full Youtube Playlist</a>
+                </div>                
+              </div>
+          </div>
+                  <div class="top-banner">
+            <a href="#catalogue">← BACK TO BAEFLIX</a>
+        </div>
+       </section>
+
+       <section class="inactive" id="thek-section" style="display: none;">
+        <div class="bckgndimage-container">
+            <img src="assets/images/1thek_bckgnd.jpg" alt="Background Image" class="background-image" loading="lazy" />
+            <div class="overlay-content">
+                <h1>1theK Originals</h1>
+                <p>BAE173 are featured in episodes 15 and 16 of Idol House, where they play games and complete variety-style challenges. The episodes aired on December 23 and December 30 2020. </p>
+                <div class="button2-container">
+                    <a href="https://www.youtube.com/watch?v=UdbusDfU38Y&list=PLqfMxcraPOysgDEM0rNPlM5SLwznh33jc&index=1" class="button2">Full Youtube Playlist</a>
                 </div>                
               </div>
           </div>
